--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,5 +4,5 @@ compatibility_date = "2024-10-03"
 
 [[d1_databases]]
 binding = "NEWSNOW_DB"
-database_name = "newsnow-db"
-database_id = ""
+database_name = "newsnow"
+database_id = "5ad2f1eb-e5c0-459f-a99d-4352eb4dcbb6"
