--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,6 @@ pages_build_output_dir = "dist/output/public"
 compatibility_date = "2024-10-03"
 
 [[d1_databases]]
-binding = "NEWSNOW_DB"
+binding = "newsnow"
 database_name = "newsnow"
 database_id = "5ad2f1eb-e5c0-459f-a99d-4352eb4dcbb6"
